--- a/index.html
+++ b/index.html
@@ -15,27 +15,32 @@
 }
 *{box-sizing:border-box;margin:0;padding:0}
 html, body{width:100%;margin:0;padding:0;overflow-x:hidden;}
-body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:120px}
-
+body{
+  font-family:var(--font-family);
+  background:var(--color-background);
+  color:var(--color-text);
+  line-height:1.6;
+  padding-top:120px;
+}
 /* HEADER */
-header{position:fixed;top:0;left:0;width:100%;background:var(--color-primary);color:var(--color-background);z-index:1000;transition:all .3s ease;}
+header{
+  position:fixed;top:0;left:0;width:100%;
+  background:var(--color-primary);color:var(--color-background);z-index:1000;
+  transition:all .3s ease;
+}
 .logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
 .logo-container img{height:50px;margin-right:10px}
 .logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
-
 /* NAV */
 nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0;background:var(--color-primary);}
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accent);}
-
 /* HERO - BANNERS */
 .hero-banners{display:flex;width:100vw;margin-top:-60px;overflow-x:hidden;position:relative;}
 .banner{flex:0 0 33.333%;max-height:90vh;overflow:hidden;min-width:0;margin:0;}
 .banner img{width:100%;height:100%;object-fit:cover;display:block;transition:transform .5s ease;}
 .banner img:hover{ transform:scale(1.05); }
-
-/* Indicador de scroll */
 .scroll-indicator{display:none;position:absolute;right:10px;bottom:10px;font-size:1.2rem;background:rgba(0,0,0,0.5);color:#fff;padding:0.3rem 0.6rem;border-radius:4px;z-index:10;}
 @media(max-width:1024px){
   .hero-banners{flex-wrap: nowrap;overflow-x:auto;scroll-snap-type:x mandatory;-webkit-overflow-scrolling: touch;}
@@ -43,45 +48,40 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
   .scroll-indicator{display:block;animation: bounce 1s infinite alternate;}
 }
 @keyframes bounce{0%{transform: translateX(0);}100%{transform: translateX(5px);}}
-
 /* SEARCH */
 .search-container{display:flex;justify-content:center;align-items:center;margin:2rem auto;max-width:650px;padding:0 1rem}
 #clearBtn{font-size:24px;cursor:pointer;margin-right:10px;color:#555;display:none;user-select:none}
 .search-bar{display:flex;flex:1;border:1px solid var(--color-accent);border-radius:4px;overflow:hidden;align-items:center;background:#fff}
 .search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16}
 .search-bar svg{width:18px;height:18px;margin:0 10px;flex-shrink:0}
-
-/* PRODUCTOS */
+/* ROPA - PRODUCTOS */
 section{padding:4rem 2rem;text-align:center}
 section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 .products{display:grid;gap:20px;grid-template-columns:repeat(4,1fr)}
 @media (max-width:1024px){.products{grid-template-columns:repeat(2,1fr)}}
 @media (max-width:768px){.products{grid-template-columns:repeat(1,1fr)}}
-
 .product{border:1px solid var(--color-accent);border-radius:8px;padding:1rem;transition:transform .3s,box-shadow .3s;cursor:pointer}
 .product:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
 .product img{width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:8px;margin-bottom:1rem}
 .product h3{margin-bottom:.5rem;color:var(--color-secondary)}
 .product .price{font-weight:bold;color:var(--color-primary)}
-
 /* FOOTER */
 footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:2rem 1rem;margin-top:2rem}
-
 /* MODAL */
-.modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.7);justify-content:center;align-items:center;padding:20px;}
-.modal-content{background:#fff;display:flex;flex-direction:row;max-width:900px;width:90%;border-radius:10px;overflow:hidden;box-shadow:0 8px 30px rgba(0,0,0,.3);}
-.modal-left{flex:1.2;background:#000;display:flex;align-items:center;justify-content:center;}
-.modal-left img{width:100%;height:100%;object-fit:cover;border-radius:8px;}
-.modal-right{flex:1;padding:30px;display:flex;flex-direction:column;justify-content:center;text-align:left;}
-.modal-right h2{font-size:1.8rem;margin-bottom:10px;color:#111;}
-.modal-right p{margin-bottom:10px;color:#555;}
-.modal-right .price{font-size:1.5rem;font-weight:bold;margin:15px 0;color:#000;}
-.modal-right label{font-weight:600;margin-bottom:5px;display:block;font-size:0.95rem;}
-.modal-right select,.modal-right input{width:100%;padding:10px;border:1px solid #ccc;border-radius:6px;margin-bottom:15px;font-size:1rem;}
-#addToCart{background:linear-gradient(135deg,#000,#333);color:#fff;padding:14px;border:none;width:100%;border-radius:8px;font-size:1.1rem;font-weight:600;cursor:pointer;transition:all .3s ease;margin-top:10px;}
-#addToCart:hover{background:linear-gradient(135deg,#333,#000);transform:translateY(-2px);}
-.close{position:absolute;top:20px;right:30px;font-size:36px;font-weight:bold;color:#fff;cursor:pointer;z-index:2100;transition:color .3s;}
-.close:hover{color:#aaa;}
+.modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.7);justify-content:center;align-items:center}
+.modal-content{background:#fff;display:flex;flex-direction:row;max-width:900px;width:90%;border-radius:10px;overflow:hidden;position:relative}
+.modal-left, .modal-right{flex:1;padding:20px}
+.modal-left img{width:100%;height:100%;object-fit:cover;}
+.modal-right{display:flex;flex-direction:column;justify-content:center;gap:10px}
+.close{position:absolute;top:10px;right:15px;font-size:28px;cursor:pointer;color:#fff;font-weight:bold}
+#addToCart{background:var(--color-primary);color:#fff;padding:12px 15px;border:none;border-radius:5px;cursor:pointer;font-size:1rem}
+#addToCart:hover{background:#333}
+/* Responsivo Modal */
+@media(max-width:768px){
+  .modal-content{flex-direction:column;}
+  .modal-left, .modal-right{width:100%;padding:10px}
+  .modal-left img{height:auto}
+}
 </style>
 </head>
 <body>
@@ -100,7 +100,6 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   </nav>
 </header>
 
-<!-- Hero Banners -->
 <section class="hero-banners" id="inicio">
   <div class="banner"><img src="images/MODELO4.png" alt="Modelo 1"></div>
   <div class="banner"><img src="images/MODELO2.png" alt="Modelo 2"></div>
@@ -108,7 +107,6 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   <span class="scroll-indicator">&#8594; Desliza</span>
 </section>
 
-<!-- Buscador -->
 <div class="search-container">
   <span id="clearBtn">&times;</span>
   <div class="search-bar">
@@ -135,10 +133,9 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
 </footer>
 
-<!-- MODAL PRODUCTO -->
 <div id="productModal" class="modal">
-  <span class="close">&times;</span>
   <div class="modal-content">
+    <span class="close">&times;</span>
     <div class="modal-left">
       <img id="modalImage" src="" alt="Producto">
     </div>
@@ -160,7 +157,6 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 </div>
 
 <script>
-/* Productos */
 const ropaProducts = [
    {id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
    {id:2,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
@@ -178,7 +174,6 @@ function renderRopa(list){
   });
 }
 
-/* Buscador */
 const searchInput = document.getElementById('searchInput');
 const clearBtn = document.getElementById('clearBtn');
 searchInput.addEventListener('input', ()=>{
@@ -191,7 +186,6 @@ searchInput.addEventListener('input', ()=>{
 });
 clearBtn.addEventListener('click', ()=>{ searchInput.value=''; clearBtn.style.display='none'; renderRopa(); });
 
-/* Header hide on scroll */
 const header = document.getElementById('mainHeader');
 let lastY=0;
 window.addEventListener('scroll', ()=>{
@@ -200,7 +194,6 @@ window.addEventListener('scroll', ()=>{
   lastY = y<=0?0:y;
 });
 
-/* Active nav tab */
 const navLinks = document.querySelectorAll('nav a');
 const currentPage = window.location.pathname.split("/").pop();
 navLinks.forEach(link=>{
@@ -208,10 +201,8 @@ navLinks.forEach(link=>{
   if(linkPage===currentPage || (linkPage==="index.html" && currentPage==="")) link.classList.add('active');
 });
 
-/* Inicial */
 renderRopa();
 
-/* MODAL */
 const modal = document.getElementById("productModal");
 const modalImg = document.getElementById("modalImage");
 const modalTitle = document.getElementById("modalTitle");
