--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body{
   line-height:1.6;
   padding-top:120px;
 }
+
 /* HEADER */
 header{
   position:fixed;top:0;left:0;width:100%;
@@ -32,10 +33,12 @@ header{
 .logo-container img{height:50px;margin-right:10px}
 .logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
 .header-hidden .logo-container{height:0;transform:translateY(-100%)}
+
 /* NAV */
 nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0;background:var(--color-primary);}
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accent);}
+
 /* HERO - BANNERS */
 .hero-banners{display:flex;width:100vw;margin-top:-60px;overflow-x:hidden;position:relative;}
 .banner{flex:0 0 33.333%;max-height:90vh;overflow:hidden;min-width:0;margin:0;}
@@ -64,7 +67,7 @@ section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 @media (max-width:768px){.products{grid-template-columns:repeat(1,1fr)}}
 .product{border:1px solid var(--color-accent);border-radius:8px;padding:1rem;transition:transform .3s,box-shadow .3s;cursor:pointer}
 .product:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
-.product img{width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:0;margin-bottom:1rem} /* SIN bordes */
+.product img{width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:8px;margin-bottom:1rem}
 .product h3{margin-bottom:.5rem;color:var(--color-secondary)}
 .product .price{font-weight:bold;color:var(--color-primary)}
 
@@ -74,18 +77,18 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 /* MODAL */
 .modal{display:none;position:fixed;z-index:2000;left:0;top:0;width:100%;height:100%;overflow:auto;background:rgba(0,0,0,0.7);justify-content:center;align-items:center}
 .modal-content{background:#fff;display:flex;flex-direction:row;max-width:900px;width:90%;border-radius:10px;overflow:hidden;position:relative}
-.modal-left, .modal-right{flex:1;padding:0} /* SIN padding de imagen */
-.modal-left img{width:100%;height:100%;object-fit:cover;display:block;margin:0} /* Imagen completa */
-.modal-right{display:flex;flex-direction:column;justify-content:center;padding:20px;gap:10px}
+.modal-left, .modal-right{flex:1;padding:20px}
+.modal-left img{width:100%;height:100%;object-fit:cover;display:block;margin:0;}
+.modal-right{display:flex;flex-direction:column;justify-content:center;gap:10px}
 .close{position:absolute;top:10px;right:15px;font-size:28px;cursor:pointer;color:#fff;font-weight:bold}
 #addToCart{background:var(--color-primary);color:#fff;padding:12px 15px;border:none;border-radius:5px;cursor:pointer;font-size:1rem}
 #addToCart:hover{background:#333}
 
-/* Responsivo Modal */
+/* RESPONSIVE MODAL */
 @media(max-width:768px){
   .modal-content{flex-direction:column;}
-  .modal-left, .modal-right{width:100%}
-  .modal-left img{height:auto}
+  .modal-left, .modal-right{width:100%;padding:10px}
+  .modal-left img{height:300px;object-fit:cover;}
 }
 </style>
 </head>
@@ -168,7 +171,6 @@ const ropaProducts = [
    {id:3,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
    {id:4,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
 ];
-
 function renderRopa(list){
   const cont = document.getElementById('ropaProducts');
   cont.innerHTML = '';
@@ -223,7 +225,6 @@ function openModal(product){
   modalDesc.textContent = product.description;
   modalPrice.textContent = product.price;
 }
-
 modalClose.onclick = ()=> modal.style.display="none";
 window.onclick = (e)=>{ if(e.target==modal) modal.style.display="none"; };
 
