--- a/perfumes.html
+++ b/perfumes.html
@@ -35,18 +35,19 @@ h1{margin-bottom:40px;margin-top:0}
 .perfumes{display:grid;gap:20px;justify-items:center;grid-template-columns:repeat(2,1fr);}
 @media(min-width:1025px){.perfumes{grid-template-columns:repeat(5,1fr)}}
 
-.perfume{background:#fff;border:1px solid var(--color-accent);border-radius:10px;padding:15px;text-align:center;transition:transform .3s,box-shadow .3s;width:100%;max-width:220px;cursor:pointer}
+.perfume{background:#fff;border:1px solid var(--color-accent);border-radius:0;padding:15px;text-align:center;transition:transform .3s,box-shadow .3s;width:100%;max-width:220px;cursor:pointer}
 .perfume:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
-.perfume img{width:100%;height:auto;border-radius:0} /* Sin bordes */
+.perfume img{width:100%;height:auto;border-radius:0} /* sin bordes */
 .perfume h3{margin:10px 0 5px;font-size:1.1rem}
 .perfume p{margin:5px 0;font-size:0.9rem;color:#666}
 .perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
 
 /* MODAL */
 .modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.7);z-index:2000;justify-content:center;align-items:center;overflow:auto}
-.modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:10px;overflow:hidden;flex-direction:row;position:relative}
-.modal-left, .modal-right{flex:1;padding:20px}
-.modal-left img{width:100%;height:100%;object-fit:cover;display:block;margin:0} /* Imagen ocupa todo el espacio, sin bordes */
+.modal-content{background:#fff;width:90%;max-width:900px;display:flex;border-radius:0;overflow:hidden;flex-direction:row;position:relative}
+.modal-left, .modal-right{flex:1;position:relative;padding:0}
+.modal-left img{width:100%;height:100%;object-fit:cover;display:block;}
+.modal-right{display:flex;flex-direction:column;justify-content:center;gap:10px;padding:20px}
 .modal-right h2{margin-bottom:15px}
 .modal-right p{margin-bottom:15px}
 .modal-right label{font-weight:bold;display:block;margin:10px 0 5px}
@@ -57,9 +58,10 @@ h1{margin-bottom:40px;margin-top:0}
 
 /* RESPONSIVE MODAL */
 @media(max-width:1024px){
-  .modal-content{flex-direction:column;max-width:90%;}
-  .modal-left,.modal-right{padding:15px;width:100%;}
-  .modal-left img{height:300px;object-fit:cover;} /* Imagen centrada y ajustada */
+  .modal-content{flex-direction:column;width:90%;}
+  .modal-left,.modal-right{width:100%;padding:0;}
+  .modal-left img{height:300px;object-fit:cover;}
+  .modal-right{padding:15px;}
 }
 </style>
 </head>
